--- a/SSD Assignment/Pages/Account/Register.cshtml
+++ b/SSD Assignment/Pages/Account/Register.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Register";
 }
+<head>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</head>
 
 <h2>@ViewData["Title"]</h2>
 
@@ -19,13 +22,13 @@
             </div>
             <div class="image-container">
                 @if (Model.FileName == null)
-                {
-                    <img id="profimg" src="~/Uploads/ProfilePics/default.png" width="200" style="border-radius:50%" />
-                }
-                else
-                {
-                    <img id="profimg" src="~/Uploads/ProfilePics/@Model.FileName" width="200" style="border-radius:50%" />
-                }
+        {
+            <img id="profimg" src="~/Uploads/ProfilePics/default.png" width="200" style="border-radius:50%" />
+}
+else
+{
+        <img id="profimg" src="~/Uploads/ProfilePics/@Model.FileName" width="200" style="border-radius:50%" />
+}
             </div>
             <div class="form-group">
                 <label asp-for="Input.ProfilePic"></label>
@@ -52,7 +55,11 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="g-recaptcha" data-sitekey="6Lex8mYUAAAAACdnRLuBbhfQMg0WoHsckRTPxQyi"></div>
+            <br />
+
             <button type="submit" class="btn btn-default">Register</button>
+            
         </form>
     </div>
 </div>
