--- a/SSD Assignment/Pages/_ViewImports.cshtml
+++ b/SSD Assignment/Pages/_ViewImports.cshtml
@@ -3,4 +3,4 @@
 @using SSD_Assignment.Data
 @using SSD_Assignment.Models
 @namespace SSD_Assignment.Pages
-
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
