--- a/SSD Assignment/Pages/Account/Register.cshtml
+++ b/SSD Assignment/Pages/Account/Register.cshtml
@@ -5,6 +5,7 @@
 }
 <head>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <link href=~/css/Register.css rel="stylesheet" type="text/css" />
 </head>
 
 <h2>@ViewData["Title"]</h2>
