--- a/SSD Assignment/Pages/_LoginPartial.cshtml
+++ b/SSD Assignment/Pages/_LoginPartial.cshtml
@@ -17,6 +17,9 @@
             @if (@*check == true &&*@ User.IsInRole("Admin") == true)
             {
                 <li>
+                    <a class="navbuttons" asp-page="/Audit/Index">Audit</a>
+                </li>
+                <li>
                     <a class="navbuttons" asp-page="/Roles/Manage">Roles</a>
                 </li>
 
