--- a/SSD Assignment/Pages/Account/AccessDenied.cshtml
+++ b/SSD Assignment/Pages/Account/AccessDenied.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Access denied";
 }
 
+<h2 style="padding-top: 20px;"></h2>
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
