--- a/SSD Assignment/Pages/Account/Login.cshtml
+++ b/SSD Assignment/Pages/Account/Login.cshtml
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-md-4">
         <section>
-            <form method="post">
+            <form method="post" onsubmit="check_if_capcha_is_filled">
                 <h4>Use a local account to log in.</h4>
 
                 <div asp-validation-summary="All" class="text-danger"></div>
@@ -28,8 +28,11 @@
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                
-                    <div class="g-recaptcha" data-sitekey="6Lex8mYUAAAAACdnRLuBbhfQMg0WoHsckRTPxQyi"></div>
+
+                    <div class="g-recaptcha"
+                         data-callback="capcha_filled"
+                         data-expired-callback="capcha_expired"
+                         data-sitekey="6Lex8mYUAAAAACdnRLuBbhfQMg0WoHsckRTPxQyi"></div>
 
                 <div class="form-group">
                     <div class="checkbox">
@@ -42,6 +45,7 @@
 
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">Log in</button>
+
                 </div>
                 <div class="form-group">
                     <p>
