--- a/SSD Assignment/Pages/About.cshtml
+++ b/SSD Assignment/Pages/About.cshtml
@@ -5,6 +5,5 @@
 }
 <h2 style="padding-top: 20px;"></h2>
 <h2>@ViewData["Title"]</h2>
-<h3>@Model.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h3>Done by Tay Ruijie, Ryan Ng, Pamela Lim and G Manjunathan.</h3>
