Updated to lastest + Added styling for nav bar

--- a/SSD Assignment/Pages/_LoginPartial.cshtml
+++ b/SSD Assignment/Pages/_LoginPartial.cshtml
@@ -25,7 +25,7 @@
 
             }
             <li>
-                <a class="navbuttons" asp-page="/Account/Manage/Index" title="Manage">
+                <a class="navbuttons" asp-page="/Account/Manage/Index" title="Manage" style="padding: 5px 15px 5px 15px !important;">
                     @if (user.ProfilePic == null)
                     {
                         <img class="img-thumbnail img-circle" src="~/Uploads/ProfilePics/default.png" style="width: 50px; height: 50px;" />
