--- a/SSD Assignment/Pages/_Layout.cshtml
+++ b/SSD Assignment/Pages/_Layout.cshtml
@@ -36,7 +36,7 @@
                     <li><a class="navbuttons" asp-page="/Listings/Index">Listings</a></li>
                     <li style="padding: 15px;">
                         <form action="/Listings">
-                            <select class="categorynav" name="ListingCategory" style="height: 35px;">
+                            <select class="categorynav" name="ListingCategory">
                                 <option value="" disabled selected>Categories</option>
                                 <option value="Electronics">Electronics</option>
                                 <option value="Fashion">Fashion</option>
