--- a/SSD Assignment/wwwroot/css/site.css
+++ b/SSD Assignment/wwwroot/css/site.css
@@ -94,3 +94,11 @@ body {
     border: none;
     cursor: pointer;
 }
+
+.categorynav {
+    padding: 6px;
+    border: none;
+    font-size: 17px;
+    float: left;
+    height: 36px;
+}
