--- a/SSD Assignment/Pages/Listings/Edit.cshtml
+++ b/SSD Assignment/Pages/Listings/Edit.cshtml
@@ -5,17 +5,25 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+@section Styles {
+    <link rel="stylesheet" href="~/css/Products.css" />
+}
 
-<h4>Listing</h4>
+<h2 style="padding-top: 20px;">Edit this listing</h2>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Listing.ID" />
-            <input type="hidden" asp-for="Listing.Photo" />
+            @*<input type="hidden" asp-for="Listing.Photo" />*@
             <input type="hidden" asp-for="Listing.PhotoPath" />
+            <div class="form-group">
+                <label asp-for="Listing.Photo" class="control-label">Image</label>
+                <input asp-for="Listing.Photo" type="file" class="form-control" />
+                <span asp-validation-for="Listing.Photo" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Listing.Title" class="control-label"></label>
                 <input asp-for="Listing.Title" class="form-control" placeholder="Name your listing" />
@@ -60,37 +68,37 @@
             </div>
         </form>
         @*<form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Listing.ID" />
-            <div class="form-group">
-                <label asp-for="Listing.Title" class="control-label"></label>
-                <input asp-for="Listing.Title" class="form-control" />
-                <span asp-validation-for="Listing.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Listing.Price" class="control-label"></label>
-                <input asp-for="Listing.Price" class="form-control" />
-                <span asp-validation-for="Listing.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Listing.Description" class="control-label"></label>
-                <input asp-for="Listing.Description" class="form-control" />
-                <span asp-validation-for="Listing.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Listing.Category" class="control-label"></label>
-                <input asp-for="Listing.Category" class="form-control" />
-                <span asp-validation-for="Listing.Category" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Listing.Condition" class="control-label"></label>
-                <input asp-for="Listing.Condition" class="form-control" />
-                <span asp-validation-for="Listing.Condition" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>*@
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Listing.ID" />
+                <div class="form-group">
+                    <label asp-for="Listing.Title" class="control-label"></label>
+                    <input asp-for="Listing.Title" class="form-control" />
+                    <span asp-validation-for="Listing.Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Listing.Price" class="control-label"></label>
+                    <input asp-for="Listing.Price" class="form-control" />
+                    <span asp-validation-for="Listing.Price" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Listing.Description" class="control-label"></label>
+                    <input asp-for="Listing.Description" class="form-control" />
+                    <span asp-validation-for="Listing.Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Listing.Category" class="control-label"></label>
+                    <input asp-for="Listing.Category" class="form-control" />
+                    <span asp-validation-for="Listing.Category" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Listing.Condition" class="control-label"></label>
+                    <input asp-for="Listing.Condition" class="form-control" />
+                    <span asp-validation-for="Listing.Condition" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>*@
     </div>
 </div>
 
