Added hide/deny buttons if not authorised

--- a/SSD Assignment/Pages/Audit/Index.cshtml
+++ b/SSD Assignment/Pages/Audit/Index.cshtml
@@ -40,9 +40,7 @@
                     @Html.DisplayFor(modelItem => item.DateTimeStamp)
                 </td>
                 <td>
-                    <a asp-page="./Edit" asp-route-id="@item.Audit_ID">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.Audit_ID">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.Audit_ID">Delete</a>
+                    <a asp-page="./Details" asp-route-id="@item.Audit_ID">Details</a>
                 </td>
             </tr>
         }
