--- a/SSD Assignment/Pages/Account/AccessDenied.cshtml
+++ b/SSD Assignment/Pages/Account/AccessDenied.cshtml
@@ -6,6 +6,6 @@
 
 <h2 style="padding-top: 20px;"></h2>
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
+    <h1 class="text-danger" style="margin-top: 50px;">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
