--- a/SSD Assignment/Pages/Listings/Edit.cshtml
+++ b/SSD Assignment/Pages/Listings/Edit.cshtml
@@ -17,6 +17,8 @@
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Listing.ID" />
+            <input type="hidden" asp-for="Listing.PostedDateTime" />
+            <input type="hidden" asp-for="Listing.UserName" />
             @*<input type="hidden" asp-for="Listing.Photo" />*@
             <input type="hidden" asp-for="Listing.PhotoPath" />
             <div class="form-group">
