--- a/SSD Assignment/Pages/Listings/Details.cshtml
+++ b/SSD Assignment/Pages/Listings/Details.cshtml
@@ -17,12 +17,10 @@
         @Html.DisplayFor(model => model.Listing.Title)
     </h2>
     <hr />
+    Posted on
+    <strong>@Model.Listing.PostedDateTime.ToString("dd/MM/yyyy")</strong> by
+    <strong>@Html.DisplayFor(model => model.Listing.UserName)</strong>.
     <table class="description-table">
-        <tr>
-            Posted on
-            <strong>@Model.Listing.PostedDateTime.ToString("dd/MM/yyyy")</strong> by
-            <strong>@Html.DisplayFor(model => model.Listing.UserName)</strong>.
-        </tr>
         <tr>
             <td><img src="~/images/Listings/price-tag.png"></td>
             <td>S$@Html.DisplayFor(model => model.Listing.Price)</td>
@@ -42,17 +40,19 @@
         @if (!((User.Identity.Name != Model.Listing.UserName) && !(User.IsInRole("Admin"))))
         {
             <tr>
-            <td colspan = "2">
-            <a asp-page="./Edit" asp-route-id="@Model.Listing.ID"> Edit </a> |
-            <a asp-page="./Delete" asp-route-id="@Model.Listing.ID"> Delete </a>
-            </td>
+                <td colspan="2">
+                    <a asp-page="./Edit" asp-route-id="@Model.Listing.ID">Edit</a> |
+                    <a asp-page="./Delete" asp-route-id="@Model.Listing.ID">Delete</a>
+                    @if (!((User.Identity.Name != Model.Listing.UserName)))
+                    {
+                        <span>| </span><a asp-page="./Promotion" asp-route-id="@Model.Listing.ID">Promote</a>
+                    }
+                </td>
             </tr>
         }
+
     </table>
 </div>
-<a asp-page="./Promotion">
-    <input type="submit" value="Promote" />
-</a>
 
 @*<h2>Details</h2>
 
