--- a/SSD Assignment/Pages/Listings/Promotion.cshtml
+++ b/SSD Assignment/Pages/Listings/Promotion.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/Promotion.css" />
 }
 
-<h2>Promotion</h2>
+<h2 style="margin-top: 100px;">Promotion</h2>
 
 <form method="post">
     <div class="Price" style="width: 500px; margin-top: 20px;">
