--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/Products.css" />
 }
 
-<h2 style="padding-top: 20px;">Create a New Listing</h2>
+<h2 style="margin-top: 100px;">Create a New Listing</h2>
 
 <h4>What are you listing today?</h4>
 <hr />
@@ -18,7 +18,7 @@
         <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Listing.Photo" class="control-label">Image</label>
-                <input asp-for="Listing.Photo" type="file" class="form-control" />
+                <input asp-for="Listing.Photo" type="file" accept="image/*" class="form-control" />
                 <span asp-validation-for="Listing.Photo" class="text-danger"></span>
             </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
