--- a/SSD Assignment/Pages/Listings/Delete.cshtml
+++ b/SSD Assignment/Pages/Listings/Delete.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/css/Products.css" />
 }
 
-<h2>Delete</h2>
+<h2 style="margin-top: 100px;">Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
