--- a/SSD Assignment/Pages/Listings/Create.cshtml
+++ b/SSD Assignment/Pages/Listings/Create.cshtml
@@ -18,7 +18,7 @@
         <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Listing.Photo" class="control-label">Image</label>
-                <input asp-for="Listing.Photo" type="file" accept="image/*" class="form-control" />
+                <input asp-for="Listing.Photo" type="file" id="file" accept="image/*" class="form-control" onchange="return fileValidation()" />
                 <span asp-validation-for="Listing.Photo" class="text-danger"></span>
             </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Listing.Price" class="control-label"></label>
-                <input asp-for="Listing.Price" class="form-control" placeholder="Price in SGD" type="number" step="0.01" min="0"/>
+                <input asp-for="Listing.Price" class="form-control" placeholder="Price in SGD" type="number" step="0.01" min="0" />
                 <span asp-validation-for="Listing.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -73,5 +73,26 @@
 </div>
 
 @section Scripts {
+    <script type="text/javascript">
+        function fileValidation() {
+            var fileInput = document.getElementById('file');
+            var filePath = fileInput.value;
+            var allowedExtensions = /(\.jpg|\.jpeg|\.png|\.gif|\.bmp)$/i;
+            if (!allowedExtensions.exec(filePath)) {
+                alert('Sorry, chosen file is invalid, only files with extensions .jpeg /.jpg /.png /.gif/.bmp are accepted.');
+                fileInput.value = '';
+                return false;
+            } else {
+                //Image preview
+                if (fileInput.files && fileInput.files[0]) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        document.getElementById('imagePreview').innerHTML = '<img src="' + e.target.result + '"/>';
+                    };
+                    reader.readAsDataURL(fileInput.files[0]);
+                }
+            }
+        }
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
